# gitlab-sdk

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md
go-cli/: go.mod  (+5 more)
py/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.py  features.py  gitlab_sdk.py  gitlab_types.py  pyproject.toml
py/core/: context.py  control.py  error.py  response.py  result.py
py/entity/: access_request_entity.py  alert_management_entity.py  api_entities_access_requester_entity.py  api_entities_appearance_entity.py  api_entities_application_entity.py  api_entities_application_statistic_entity.py  api_entities_application_with_secret_entity.py  api_entities_avatar_entity.py  api_entities_award_emoji_entity.py  api_entities_badge_entity.py  api_entities_basic_badge_detail_entity.py  api_entities_basic_group_detail_entity.py  api_entities_basic_project_detail_entity.py  api_entities_basic_ref_entity.py  api_entities_basic_success_entity.py  api_entities_batched_background_migration_entity.py  api_entities_branch_entity.py  api_entities_bulk_import_entity.py  api_entities_bulk_imports_entity_failure_entity.py  api_entities_bulk_imports_export_status_entity.py  api_entities_changelog_entity.py  api_entities_ci_bridge_entity.py  api_entities_ci_catalog_resources_version_entity.py  api_entities_ci_job_basic_entity.py  api_entities_ci_job_basic_with_project_entity.py  api_entities_ci_job_entity.py  api_entities_ci_lint_result_entity.py  api_entities_ci_pipeline_basic_entity.py  api_entities_ci_pipeline_entity.py  api_entities_ci_pipeline_schedule_detail_entity.py  (+246 more)
(+5515 files in other folders)
